examples/test/testpolicy4018.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4018
  namespace: namespace359
spec:
  podSelector:
    matchLabels:
      key44: value14
      key13: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value11
      podSelector:
        matchLabels:
          key9: value23
          key10: value19
          key45: value26
